feat: improve the map layout
